# uhd-fairwaves-winport

./: README.md
UHD-Fairwaves/fpga/top/UmTRX/coregen/: fifo_4k_2clk.gise  fifo_short_2clk.gise
UHD-Fairwaves/host/: CMakeLists.txt  lms6002d_ctrl.cpp  power_amp.cpp  umtrx_eeprom.cpp  umtrx_fifo_ctrl.cpp  umtrx_find.cpp  umtrx_iface.cpp  umtrx_impl.cpp  umtrx_impl.hpp  umtrx_io_impl.cpp  umtrx_monitor.cpp
UHD-Fairwaves/host/cores/: apply_corrections.cpp  rx_dsp_core_200.cpp  super_recv_packet_handler.hpp  super_send_packet_handler.hpp  tx_dsp_core_200.cpp
uhd/.ci/docker/: uhd-builder-vs2019-v142-x64-py310.Dockerfile  uhd-builder-vs2019-v142-x64-py312.Dockerfile
uhd/fpga/usrp3/top/x400/rf/400m/: rf_core_400m.v
uhd/fpga/usrp3/top/x400/rf/common/: axi_rfdc_info_memory.v  rfdc_info_memory.sv
uhd/host/: CMakeLists.txt
uhd/host/cmake/msvc/: erllc_uhd_b200mini.inf  erllc_uhd_makecat.cdf
uhd/host/examples/python/: rfnoc_rx_replay_samples_to_file.py
